--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<h1> Hello Adan <h1>
-  <h3> Hello Adnan 2 hello <h3>
+<h1> Hello Adan </h1>
+  <h3> Hello Adnan 2 hello </h3>
+  
+  <h2> Hello adan 2 </h2>
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
